# Copyright 2025 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../scripts/build/ninja/devtools_module.gni")

devtools_module("mcp") {
  sources = [ "mcp.ts" ]

  deps = [
    "../front_end/models/ai_assistance",
    "../front_end/models/trace:bundle",
  ]
}
