# Copyright 2025 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../scripts/build/ninja/devtools_module.gni")

devtools_module("mcp") {
  sources = [ "mcp.ts" ]

  deps = [
    "../front_end/models/ai_assistance",
    "../front_end/models/issues_manager:bundle",
    "../front_end/models/trace:bundle",
  ]
}

ts_library("foundation_unittests") {
  testonly = true

  sources = [ "mcp.test.ts" ]

  deps = [ ":mcp" ]
}

generated_file("test_inputs") {
  outputs = [ "$target_gen_dir/foundation_tests.txt" ]
  data_keys = [ "tests" ]
  rebase = target_gen_dir

  deps = [ ":foundation_unittests" ]
}
