# Copyright 2025 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../scripts/build/ninja/devtools_module.gni")

devtools_module("mcp") {
  sources = [
    "HostBindings.ts",
    "mcp.ts",
  ]

  es_target = "es2023"
  es_libs = []
  runs_in = "node_esm"

  deps = [
    "../front_end/core/common:bundle",
    "../front_end/core/host:bundle",
    "../front_end/core/sdk:meta",
    "../front_end/foundation:bundle",
    "../front_end/models/ai_assistance",
    "../front_end/models/bindings:bundle",
    "../front_end/models/crux-manager:bundle",
    "../front_end/models/formatter:bundle",
    "../front_end/models/issues_manager:bundle",
    "../front_end/models/stack_trace:bundle",
    "../front_end/models/trace:bundle",
    "../front_end/models/workspace:meta",
  ]
}

ts_library("foundation_unittests") {
  testonly = true

  sources = [ "mcp.test.ts" ]

  deps = [ ":mcp" ]
}

generated_file("test_inputs") {
  outputs = [ "$target_gen_dir/foundation_tests.txt" ]
  data_keys = [ "tests" ]
  rebase = target_gen_dir

  deps = [ ":foundation_unittests" ]
}
