# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../scripts/build/ninja/copy.gni")
import("../third_party/typescript/typescript.gni")

group("test") {
  deps = [
    ":config",
    ":run",
    ":unittests",
    "e2e",
    "interactions",
    "perf",
    "shared",
  ]
}

group("unittests") {
  deps = [
    ":config",
    "../front_end:test_inputs",
    "../front_end:unittests",
    "../inspector_overlay:unittests",
    "shared",
    "unit:karma",
  ]
}

copy_to_gen("config") {
  sources = [
    "base-mocharc.js",
    "karma.conf.js",
  ]
}

node_ts_library("run") {
  sources = [ "run.ts" ]

  deps = [ "shared" ]
}

source_root = rebase_path("//$devtools_location", "$target_gen_dir")
write_file("$target_gen_dir/build.js",
           "module.exports = {SOURCE_ROOT: '$source_root'};")
