# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../scripts/build/ninja/copy.gni")

group("test") {
  deps = [
    ":config",
    ":unittests",
    "e2e",
    "interactions",
    "perf",
    "shared",
  ]
}

group("unittests") {
  deps = [
    ":config",
    "../front_end:unittests",
    "../inspector_overlay:unittests",
    "shared",
  ]
}

copy_to_gen("config") {
  sources = [
    "base-mocharc.js",
    "karma.conf.js",
  ]
}
