# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../scripts/build/ninja/vars.gni")

all_devtools_files = [
  "front_end/entrypoints/shell/shell.js",
  "front_end/entrypoints/devtools_app/devtools_app.js",
  "front_end/entrypoints/inspector/inspector.js",
  "front_end/entrypoints/js_app/js_app.js",
  "front_end/entrypoints/ndb_app/ndb_app.js",
  "front_end/entrypoints/node_app/node_app.js",
  "front_end/entrypoints/worker_app/worker_app.js",
  "front_end/legacy_test_runner/accessibility_test_runner/accessibility_test_runner.js",
  "front_end/legacy_test_runner/application_test_runner/application_test_runner.js",
  "front_end/legacy_test_runner/bindings_test_runner/bindings_test_runner.js",
  "front_end/legacy_test_runner/application_test_runner/CacheStorageTestRunner.js",
  "front_end/legacy_test_runner/application_test_runner/IndexedDBTestRunner.js",
  "front_end/legacy_test_runner/application_test_runner/ResourcesTestRunner.js",
  "front_end/legacy_test_runner/application_test_runner/ResourceTreeTestRunner.js",
  "front_end/legacy_test_runner/application_test_runner/ServiceWorkersTestRunner.js",
  "front_end/legacy_test_runner/application_test_runner/StorageTestRunner.js",
  "front_end/legacy_test_runner/lighthouse_test_runner/lighthouse_test_runner.js",
  "front_end/panels/lighthouse/module.json",
  "front_end/legacy_test_runner/axe_core_test_runner/axe_core_test_runner.js",
  "front_end/third_party/axe-core/axe.js",
  "front_end/legacy_test_runner/bindings_test_runner/AutomappingTestRunner.js",
  "front_end/legacy_test_runner/bindings_test_runner/BindingsTestRunner.js",
  "front_end/legacy_test_runner/bindings_test_runner/IsolatedFilesystemTestRunner.js",
  "front_end/legacy_test_runner/bindings_test_runner/OverridesTestRunner.js",
  "front_end/legacy_test_runner/bindings_test_runner/PersistenceTestRunner.js",
  "front_end/third_party/codemirror/codemirror.css",
  "front_end/legacy_test_runner/console_test_runner/console_test_runner.js",
  "front_end/legacy_test_runner/coverage_test_runner/coverage_test_runner.js",
  "front_end/legacy_test_runner/cpu_profiler_test_runner/cpu_profiler_test_runner.js",
  "front_end/legacy_test_runner/data_grid_test_runner/data_grid_test_runner.js",
  "front_end/legacy_test_runner/device_mode_test_runner/device_mode_test_runner.js",
  "front_end/legacy_test_runner/elements_test_runner/elements_test_runner.js",
  "front_end/legacy_test_runner/elements_test_runner/EditDOMTestRunner.js",
  "front_end/legacy_test_runner/elements_test_runner/ElementsPanelShadowSelectionOnRefreshTestRunner.js",
  "front_end/legacy_test_runner/elements_test_runner/ElementsTestRunner.js",
  "front_end/legacy_test_runner/elements_test_runner/SetOuterHTMLTestRunner.js",
  "front_end/legacy_test_runner/elements_test_runner/StylesUpdateLinksTestRunner.js",
  "front_end/legacy_test_runner/extensions_test_runner/extensions_test_runner.js",
  "front_end/legacy_test_runner/extensions_test_runner/ExtensionsNetworkTestRunner.js",
  "front_end/legacy_test_runner/extensions_test_runner/ExtensionsTestRunner.js",
  "front_end/legacy_test_runner/heap_profiler_test_runner/heap_profiler_test_runner.js",
  "front_end/entrypoints/inspector/inspector.js",
  "front_end/entrypoints/inspector/inspector.json",
  "front_end/legacy_test_runner/layers_test_runner/layers_test_runner.js",
  "front_end/panels/layers/module.json",
  "front_end/entrypoints/ndb_app/ndb_app.json",
  "front_end/legacy_test_runner/network_test_runner/network_test_runner.js",
  "front_end/entrypoints/node_main/nodeConnectionsPanel.css",
  "front_end/legacy_test_runner/performance_test_runner/performance_test_runner.js",
  "front_end/legacy_test_runner/performance_test_runner/TimelineDataTestRunner.js",
  "front_end/legacy_test_runner/performance_test_runner/TimelineTestRunner.js",
  "front_end/models/issues_manager/descriptions/arAttributionEventSourceTriggerDataTooLarge.md",
  "front_end/models/issues_manager/descriptions/arAttributionSourceUntrustworthyFrameOrigin.md",
  "front_end/models/issues_manager/descriptions/arAttributionSourceUntrustworthyOrigin.md",
  "front_end/models/issues_manager/descriptions/arAttributionTriggerDataTooLarge.md",
  "front_end/models/issues_manager/descriptions/arAttributionUntrustworthyFrameOrigin.md",
  "front_end/models/issues_manager/descriptions/arAttributionUntrustworthyOrigin.md",
  "front_end/models/issues_manager/descriptions/arInvalidAttributionData.md",
  "front_end/models/issues_manager/descriptions/arInvalidAttributionSourceEventId.md",
  "front_end/models/issues_manager/descriptions/arMissingAttributionData.md",
  "front_end/models/issues_manager/descriptions/arPermissionPolicyDisabled.md",
  "front_end/models/issues_manager/descriptions/CoepCoopSandboxedIframeCannotNavigateToCoopPage.md",
  "front_end/models/issues_manager/descriptions/CoepCorpNotSameSite.md",
  "front_end/models/issues_manager/descriptions/CoepCorpNotSameOrigin.md",
  "front_end/models/issues_manager/descriptions/CoepCorpNotSameOriginAfterDefaultedToSameOriginByCoep.md",
  "front_end/models/issues_manager/descriptions/CoepFrameResourceNeedsCoepHeader.md",
  "front_end/models/issues_manager/descriptions/cspEvalViolation.md",
  "front_end/models/issues_manager/descriptions/cspInlineViolation.md",
  "front_end/models/issues_manager/descriptions/cspURLViolation.md",
  "front_end/models/issues_manager/descriptions/deprecationNavigatorUserAgent.md",
  "front_end/models/issues_manager/descriptions/LowTextContrast.md",
  "front_end/models/issues_manager/descriptions/cspTrustedTypesSinkViolation.md",
  "front_end/models/issues_manager/descriptions/cspTrustedTypesPolicyViolation.md",
  "front_end/models/issues_manager/descriptions/CompatibilityModeQuirks.md",
  "front_end/models/issues_manager/descriptions/heavyAd.md",
  "front_end/models/issues_manager/descriptions/corsAllowCredentialsRequired.md",
  "front_end/models/issues_manager/descriptions/corsDisallowedByMode.md",
  "front_end/models/issues_manager/descriptions/corsDisabledScheme.md",
  "front_end/models/issues_manager/descriptions/corsNoCorsRedirectModeNotFollow.md",
  "front_end/models/issues_manager/descriptions/corsHeaderDisallowedByPreflightResponse.md",
  "front_end/models/issues_manager/descriptions/corsInvalidHeaderValues.md",
  "front_end/models/issues_manager/descriptions/corsMethodDisallowedByPreflightResponse.md",
  "front_end/models/issues_manager/descriptions/corsOriginMismatch.md",
  "front_end/models/issues_manager/descriptions/corsPreflightResponseInvalid.md",
  "front_end/models/issues_manager/descriptions/corsRedirectContainsCredentials.md",
  "front_end/models/issues_manager/descriptions/corsWildcardOriginNotAllowed.md",
  "front_end/models/issues_manager/descriptions/mixedContent.md",
  "front_end/models/issues_manager/descriptions/sharedArrayBuffer.md",
  "front_end/models/issues_manager/descriptions/corsInsecurePrivateNetwork.md",
  "front_end/models/issues_manager/descriptions/corsInsecurePrivateNetworkPreflight.md",
  "front_end/models/issues_manager/descriptions/SameSiteExcludeContextDowngradeRead.md",
  "front_end/models/issues_manager/descriptions/SameSiteExcludeContextDowngradeSet.md",
  "front_end/models/issues_manager/descriptions/SameSiteExcludeNavigationContextDowngrade.md",
  "front_end/models/issues_manager/descriptions/SameSiteInvalidSameParty.md",
  "front_end/models/issues_manager/descriptions/SameSiteNoneInsecureErrorRead.md",
  "front_end/models/issues_manager/descriptions/SameSiteNoneInsecureErrorSet.md",
  "front_end/models/issues_manager/descriptions/SameSiteNoneInsecureWarnRead.md",
  "front_end/models/issues_manager/descriptions/SameSiteNoneInsecureWarnSet.md",
  "front_end/models/issues_manager/descriptions/SameSiteUnspecifiedLaxAllowUnsafeRead.md",
  "front_end/models/issues_manager/descriptions/SameSiteUnspecifiedLaxAllowUnsafeSet.md",
  "front_end/models/issues_manager/descriptions/SameSiteUnspecifiedTreatedAsLaxRead.md",
  "front_end/models/issues_manager/descriptions/SameSiteUnspecifiedTreatedAsLaxSet.md",
  "front_end/models/issues_manager/descriptions/SameSiteWarnCrossDowngradeRead.md",
  "front_end/models/issues_manager/descriptions/SameSiteWarnCrossDowngradeSet.md",
  "front_end/models/issues_manager/descriptions/SameSiteWarnStrictLaxDowngradeStrict.md",
  "front_end/models/issues_manager/descriptions/TwaDigitalAssetLinksFailed.md",
  "front_end/models/issues_manager/descriptions/TwaHttpError.md",
  "front_end/models/issues_manager/descriptions/TwaPageUnavailableOffline.md",
  "front_end/panels/screencast/module.json",
  "front_end/legacy_test_runner/sdk_test_runner/sdk_test_runner.js",
  "front_end/legacy_test_runner/security_test_runner/security_test_runner.js",
  "front_end/entrypoints/shell/shell.json",
  "front_end/ui/legacy/components/source_frame/fontView.css",
  "front_end/ui/legacy/components/source_frame/imageView.css",
  "front_end/ui/legacy/components/source_frame/jsonView.css",
  "front_end/ui/legacy/components/source_frame/messagesPopover.css",
  "front_end/ui/legacy/components/source_frame/module.json",
  "front_end/ui/legacy/components/source_frame/resourceSourceFrame.css",
  "front_end/ui/legacy/components/source_frame/xmlTree.css",
  "front_end/ui/legacy/components/source_frame/xmlView.css",
  "front_end/legacy_test_runner/sources_test_runner/sources_test_runner.js",
  "front_end/legacy_test_runner/sources_test_runner/AutocompleteTestRunner.js",
  "front_end/legacy_test_runner/sources_test_runner/DebuggerTestRunner.js",
  "front_end/legacy_test_runner/sources_test_runner/EditorTestRunner.js",
  "front_end/legacy_test_runner/sources_test_runner/LiveEditTestRunner.js",
  "front_end/legacy_test_runner/sources_test_runner/SearchTestRunner.js",
  "front_end/legacy_test_runner/sources_test_runner/SourcesTestRunner.js",
  "front_end/ui/legacy/components/text_editor/autocompleteTooltip.css",
  "front_end/ui/legacy/components/text_editor/cmdevtools.css",
  "front_end/ui/legacy/components/text_editor/module.json",
  "front_end/third_party/lighthouse/report-assets/report.js",
  "front_end/third_party/lighthouse/report-assets/standalone-template.html",
]

lighthouse_locale_files = [
  "locales/ar-XB.json",
  "locales/ar.json",
  "locales/bg.json",
  "locales/ca.json",
  "locales/cs.json",
  "locales/da.json",
  "locales/de.json",
  "locales/el.json",
  "locales/en-GB.json",
  "locales/en-US.json",
  "locales/en-XA.json",
  "locales/en-XL.json",
  "locales/es-419.json",
  "locales/es.json",
  "locales/fi.json",
  "locales/fil.json",
  "locales/fr.json",
  "locales/he.json",
  "locales/hi.json",
  "locales/hr.json",
  "locales/hu.json",
  "locales/id.json",
  "locales/it.json",
  "locales/ja.json",
  "locales/ko.json",
  "locales/lt.json",
  "locales/lv.json",
  "locales/nl.json",
  "locales/no.json",
  "locales/pl.json",
  "locales/pt-PT.json",
  "locales/pt.json",
  "locales/ro.json",
  "locales/ru.json",
  "locales/sk.json",
  "locales/sl.json",
  "locales/sr-Latn.json",
  "locales/sr.json",
  "locales/sv.json",
  "locales/ta.json",
  "locales/te.json",
  "locales/th.json",
  "locales/tr.json",
  "locales/uk.json",
  "locales/vi.json",
  "locales/zh-HK.json",
  "locales/zh-TW.json",
  "locales/zh.json",
]

remote_devtools_locale_files = [
  "af.json",
  "am.json",
  "ar.json",
  "as.json",
  "az.json",
  "be.json",
  "bg.json",
  "bn.json",
  "bs.json",
  "ca.json",
  "cs.json",
  "cy.json",
  "da.json",
  "de.json",
  "el.json",
  "en-GB.json",
  "es-419.json",
  "es.json",
  "et.json",
  "eu.json",
  "fa.json",
  "fi.json",
  "fil.json",
  "fr-CA.json",
  "fr.json",
  "gl.json",
  "gu.json",
  "he.json",
  "hi.json",
  "hr.json",
  "hu.json",
  "hy.json",
  "id.json",
  "is.json",
  "it.json",
  "ja.json",
  "ka.json",
  "kk.json",
  "km.json",
  "kn.json",
  "ko.json",
  "ky.json",
  "lo.json",
  "lt.json",
  "lv.json",
  "mk.json",
  "ml.json",
  "mn.json",
  "mr.json",
  "ms.json",
  "my.json",
  "ne.json",
  "nl.json",
  "no.json",
  "or.json",
  "pa.json",
  "pl.json",
  "pt-PT.json",
  "pt.json",
  "ro.json",
  "ru.json",
  "si.json",
  "sk.json",
  "sl.json",
  "sq.json",
  "sr-Latn.json",
  "sr.json",
  "sv.json",
  "sw.json",
  "ta.json",
  "te.json",
  "th.json",
  "tr.json",
  "uk.json",
  "ur.json",
  "uz.json",
  "vi.json",
  "zh-HK.json",
  "zh-TW.json",
  "zu.json",
]

bundled_devtools_locale_files = [
  "en-US.json",
  "zh.json",
]
